--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <h1>4. Purchase</h1>
-              <img src="assets/img/purchase.jpg" class="img-fluid" alt="">
+              <img src="assets/img/purchase1.jpg" class="img-fluid" alt="">
               <h2>Once the order is confirmed we print the fabric with your custom pattern on it cut and sew it to the selected product and size and ship it to you.</h2>
             </div>
           </div>
