--- a/index.html
+++ b/index.html
@@ -111,25 +111,12 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
+  <header id="header" class="">
     <div class="container d-flex align-items-center justify-content-between">
 
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="logo"><img src="patternme.png" alt="" class="img-fluid"></a>
 
-      <!-- <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
-
-        </ul>
-      </nav> -->
-
-        <!-- <a href="#about" class="get-started-btn scrollto">Get Started</a> -->
 
     </div>
   </header>
