--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <meta property="og:title" content="Patternme" />
   <meta property="og:url" content="https://patternme.me/" />
   <meta property="og:description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
-  <meta property="og:image" content="favicon-16x16.png">
+  <meta property="og:image" content="favicon-16x16.png"><meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
+
 
  
 
