--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <title>Patternme</title>
   <meta charset="UTF-8">
   <meta name="description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
-  <meta name="keywords" content="HTML, CSS, JavaScript, AI">
+  <meta name="keywords" content="">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Patternme" />
   <meta property="og:url" content="https://patternme.me/" />
   <meta property="og:description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
-  <meta property="og:image" content="favicon-16x16.png"><meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image" content="favicon-16x16.png"><meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
-  <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
+  <meta property="og:image:alt" content="Patternme Logo" />
 
 
  
