--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Patternme</title>
   <meta charset="UTF-8">
   <meta name="description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
-  <meta name="keywords" content="">
+  <meta name="keywords" content="fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, fashion accessory">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Patternme" />
