--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <meta property="og:title" content="Patternme" />
   <meta property="og:url" content="https://patternme.me/" />
   <meta property="og:description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
-
-
-
- 
+  <meta property="og:image" content="patternme.png"><meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:image:alt" content="Patternme Logo" />
 
   <!-- Favicons -->
 
